# cmd/routes/product.route.go
@@ -16,7 +16,6 @@ func ProductRoutes(v1 *gin.RouterGroup, productSrv service.ProductService, authS
 	product.Use(auth.CheckJWT())
 	{
 		product.POST("", handler.Add)
-		product.GET("/:product_id", handler.Get)
 		product.PATCH("/:product_id", handler.Edit)
 		product.DELETE("/:product_id", handler.Delete)
 		product.POST("/:product_id/ratings", handler.AddRating)
@@ -24,6 +23,7 @@ func ProductRoutes(v1 *gin.RouterGroup, productSrv service.ProductService, authS
 
 	product1 := v1.Group("/products")
 	{
+		product.GET("/:product_id", handler.Get)
 		product1.GET("", handler.GetAll)
 	}
 }
